--- a/sa_module/CMakeLists.txt
+++ b/sa_module/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY D:/GTASAR3)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY D:/GTASAR3)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY D:/GTASAR3)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "D:/GTA San Andreas")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "D:/GTA San Andreas")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "D:/GTA San Andreas")
+#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "D:/GTA San Andreas")
+#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "D:/GTA San Andreas")
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "D:/GTA San Andreas")
 #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY D:/ARZLauncher/bin/arizona)
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY D:/ARZLauncher/bin/arizona)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY D:/ARZLauncher/bin/arizona)
